src/test/deca/context/valid/if_else_cmp.deca
{
    if (1 != 1) {
        println("no");
    }
    else {
        println("yes");
    }

    if (1 < 1) {
        println("no");
    }
    else {
        println("yes");
    }

    if (1 > 1) {
        println("no");
    }
    else {
        println("yes");
    }

    if (2 <= 1) {
        println("no");
    }
    else {
        println("yes");
    }

    if (2 < 1) {
        println("no");
    }
    else {
        println("yes");
    }

    if (1 >= 2) {
        println("no");
    }
    else {
        println("yes");
    }

    if (1 > 2) {
        println("no");
    }
    else {
        println("yes");
    }

    if (2 == 1) {
        println("no");
    }
    else {
        println("yes");
    }
}