src/test/deca/context/invalid/invalid_op_bool.deca
{
1 && false;
<<<<<<< HEAD
}
=======
}
>>>>>>> context
